// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#Editor expect to render 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Editor
    value=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="Editor__wrapper"
      >
        <div
          className="Editor__content"
          contentEditable={true}
          dangerouslySetInnerHTML={
            Object {
              "__html": "",
            }
          }
          spellCheck={false}
        />
      </div>,
      "className": "Editor",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="Editor__content"
          contentEditable={true}
          dangerouslySetInnerHTML={
            Object {
              "__html": "",
            }
          }
          spellCheck={false}
        />,
        "className": "Editor__wrapper",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "Editor__content",
          "contentEditable": true,
          "dangerouslySetInnerHTML": Object {
            "__html": "",
          },
          "spellCheck": false,
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="Editor__wrapper"
        >
          <div
            className="Editor__content"
            contentEditable={true}
            dangerouslySetInnerHTML={
              Object {
                "__html": "",
              }
            }
            spellCheck={false}
          />
        </div>,
        "className": "Editor",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="Editor__content"
            contentEditable={true}
            dangerouslySetInnerHTML={
              Object {
                "__html": "",
              }
            }
            spellCheck={false}
          />,
          "className": "Editor__wrapper",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "Editor__content",
            "contentEditable": true,
            "dangerouslySetInnerHTML": Object {
              "__html": "",
            },
            "spellCheck": false,
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`#Editor expect to render the dangerously html 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Editor
    value="Hey, dummy testing"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="Editor__wrapper"
      >
        <div
          className="Editor__content"
          contentEditable={true}
          dangerouslySetInnerHTML={
            Object {
              "__html": "Hey, dummy testing",
            }
          }
          spellCheck={false}
        />
      </div>,
      "className": "Editor",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="Editor__content"
          contentEditable={true}
          dangerouslySetInnerHTML={
            Object {
              "__html": "Hey, dummy testing",
            }
          }
          spellCheck={false}
        />,
        "className": "Editor__wrapper",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "Editor__content",
          "contentEditable": true,
          "dangerouslySetInnerHTML": Object {
            "__html": "Hey, dummy testing",
          },
          "spellCheck": false,
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="Editor__wrapper"
        >
          <div
            className="Editor__content"
            contentEditable={true}
            dangerouslySetInnerHTML={
              Object {
                "__html": "Hey, dummy testing",
              }
            }
            spellCheck={false}
          />
        </div>,
        "className": "Editor",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="Editor__content"
            contentEditable={true}
            dangerouslySetInnerHTML={
              Object {
                "__html": "Hey, dummy testing",
              }
            }
            spellCheck={false}
          />,
          "className": "Editor__wrapper",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "Editor__content",
            "contentEditable": true,
            "dangerouslySetInnerHTML": Object {
              "__html": "Hey, dummy testing",
            },
            "spellCheck": false,
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
